tests/paczka1/small_fuzzy/78154939.err
Error in line 1: A70 A619 63,0
Error in line 4: A70 A700 2,8
Error in line 7: lDIWNh5QNI A700 51,1
Error in line 10: lDIWNh5QNI A70 4,1
